2004-10-27  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-start.el (gnus-check-reasonable-setup): Use fboundp instead
	of boundp to check if display-warning is available.

2004-10-26  Teodor Zlatanov  <tzz@lifelogs.com>

	* nnimap.el (nnimap-open-connection): fixed prog1/prog2 bug

2004-10-26  Katsumi Yamaoka  <yamaoka@jpl.org>

	* nnspool.el (nnspool-spool-directory): Use news-path if the
	news-directory variable is not bound.

	* gnus-start.el (gnus-check-reasonable-setup): Use an alternative
	function instead of display-warning if it is not available.

2004-10-26  Reiner Steib  <Reiner.Steib@gmx.de>

	* gnus-agent.el (gnus-agent-expire-group-1): Fix last merge from
	v5-10: Use `point-at-bol'.

2004-10-26  Simon Josefsson  <jas@extundo.com>

	* hashcash.el: Fix URL in comment, reported by Cheng Gao
	<chenggao@gmail.com>.

2004-10-25  Reiner Steib  <Reiner.Steib@gmx.de>

	* html2text.el (html2text-buffer-head): Removed.  Use `goto-char'
	instead.

2004-10-25  Teodor Zlatanov  <tzz@lifelogs.com>

	* nnimap.el (nnimap-remove-server-from-buffer-alist): new function
	to remove a server from the nnimap-server-buffer-alist
	(nnimap-open-connection, nnimap-close-server): use it

	* gnus-encrypt.el: removed in favor of encrypt.el

2004-10-21  Katsumi Yamaoka  <yamaoka@jpl.org>

	* mm-view.el (mm-display-inline-fontify): Inhibit font-lock when
	running the major-mode function.

2004-10-19  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-sum.el (gnus-update-summary-mark-positions): Search for
	dummy marks in the right way.

2004-10-18  David Edmondson  <dme@dme.org>

	* mm-view.el (mm-w3m-cid-retrieve-1): Don't use recursive call
	excessively.

2004-10-18  Teodor Zlatanov  <tzz@lifelogs.com>

	* gnus-util.el (gnus-split-references): accept a nil references
	string and go on blissfully

	* gnus-registry.el (gnus-registry-split-fancy-with-parent): catch
	cases where the references string is non-nil but has no references

	* encrypt.el: add autoload tags
