@@ -1,3 +1,14 @@
+2004-10-28  Katsumi Yamaoka  <yamaoka@jpl.org>
+
+	* gnus-sum.el (gnus-update-summary-mark-positions): Allow users to
+	use the same characters as the dummy marks; make it free from
+	getting affected by the language environment.
+	(gnus-summary-read-group-1): Update mark positions only when the
+	format spec is updated.
+
+	* gnus-spec.el (gnus-update-format-specifications): Return a list
+	of updated types.
+
 2004-10-27  Katsumi Yamaoka  <yamaoka@jpl.org>
 
 	* gnus-start.el (gnus-check-reasonable-setup): Use fboundp instead
